<resources>
    <string name="app_name">Cifra Note</string>
    <string name="musicNameField">Nome da Musica</string>
    <string name="musicKeyField">Tonalidade</string>
    <string name="filePicker">Escolher Arquivo</string>
    <string name="inserirDados">Salvar</string>
    <string name="manual1">
        Seja bem vindo ao Cifra Note!
    </string>
    <string name="manual2">
        Este aplicativo foi desenvolvido para os músicos de precisam de um lugar para anotar suas
        cifras de maneira rápida, fácil e acessível. A idéia é que no lugar de escrever em um caderno
        ou utilizar aplicações que ocupam muito espaço de armazenamento para visualizar cifras, o
        usuário tenha um caderno virtual. Isto faz com que este aplicativo seja leve e seguro. O
        usuário deve seguir o passo a passo abaixo para guardar sua cifra no Cifra Note:
    </string>
    <string name="manual3">
        1. Apertar o botão + no canto inferior direito na tela principal do seu aplicativo.
    </string>
    <string name="manual4">
        2. Preencher os campos de nome da música e tonalidade.
    </string>
    <string name="manual5">
        3. Importar um arquivo \'nomedacifra.txt\'. O usuário pode digitar a cifra em seu computador, salvá-la, e importar no aplicativo.
    </string>
    <string name="manual6">
        3.1 Escrevendo o arquivo \'parabensparavoce.txt\' (no seu computador):
        OBS: É muito importante que o arquivo tenha o seguinte formato:
    </string>
    <string name="manual7">
        G;D;\n
        Para|béns pra vo|cê\n
        G;\n
        Nesta data que|rida\n
        C;\n
        Muitas felici|dades\n
        D;G;\n
        Muitos |anos de |vida\n
    </string>
    <string name="manual8">
        3.2 Copie o arquivo para o armazenamento local do seu dispositivo
    </string>
    <string name="manual9">
        3.3 Selecione este arquivo no campo cifra
    </string>
    <string name="manual10">
        4. Salvar
    </string>
    <string name="manual11">
        Tudo certo! A cifra foi armazenada, e o usuário já pode aproveitar para tocar suas músicas
        preferidas!
    </string>
    <string name="delete">delete</string>
    <string name="action_help">Ajuda</string>
    <string name="action_settings">Configurações</string>
    <string name="fontFamily">Fonte</string>
    <string name="fontSize">Tamanho</string>
    <string name="fontColor">Cor da cifra</string>

    <string-array name="sizes_array">
        <item>Pequeno</item>
        <item>Médio</item>
        <item>Grande</item>
        <item>Extra grande</item>
    </string-array>

    <string-array name="family_array">
        <item>Alegreya SC</item>
        <item>Alike Angular</item>
    </string-array>

    <string-array name="colors_array">
        <item>Vermelho</item>
        <item>Azul</item>
        <item>Rosa</item>
        <item>Roxo</item>
    </string-array>

    <string name="favoritos">Favoritos</string>

    <string name="zoomin">Zoom In</string>

    <string name="zoomout">Zoom Out</string>

</resources>
